# fastapi-utils

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  test.ipynb
.ci-config/: application.yaml
.configs/: application.yaml  data_store.yaml  database.yaml  message_broker.yaml
.github/workflows/: ci.yaml  sync-to-A-Team-VPL.yaml
src/fastapi_utils/: __init__.py  app.py
src/fastapi_utils/dependencies/: __init__.py  authorize.py  encrypt.py  resources.py
src/fastapi_utils/dependency/: __init__.py  authorize.py  encrypt.py
src/fastapi_utils/exceptions/: __init__.py  resources.py
src/fastapi_utils/middlewares/: exception_handlers.py  request_trackers.py
src/fastapi_utils/prometheus_instrument/: __init__.py  instrumentator.py  metrics.py  middleware.py  routing.py
src/fastapi_utils/resources/: crud.py
src/fastapi_utils/schemas/: authorization.py
src/fastapi_utils/tracking_request/: middleware.py
tests/: conftest.py
tests/data/configs/: application.yaml  database.yaml  iam.yaml  message_broker.yaml  private_key.pem  public_key.pem
tests/double/fake/: __init__.py  handlers.py  models.py  schemas.py
tests/integration/: conftest.py  test_app.py  test_encryption.py  test_resource.py
tests/integration/dependencies/: test_authorize.py  test_resources.py
tests/integration/dependency/: test_authorize.py
tests/integration/prometheus_instrument/: test_expose.py  test_intrumentation.py
